--- a/.github/workflows/fetch_.yml
+++ b/.github/workflows/fetch_.yml
@@ -40,8 +40,7 @@ jobs:
       # push updated file back to main branch
       - run: git config --local user.email "action@github.com"
       - run: git config --local user.name "GitHub Action"
-      - run: git add data
-      - run: git commit -m "data.csv updated"
+      - run: git commit -am "data.csv updated"
       - run: "git push https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git HEAD"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
